name:                iwlib
version:             0.1.0.0
synopsis:            A binding to the iw library for getting info about the current WiFi connection.
homepage:            http://xmobar.org
license:             BSD3
license-file:        LICENSE
author:              Jose A. Ortega Ruiz <jao@gnu.org>
maintainer:          Leif Warner <abimelech@gmail.com>
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4 && <4.11
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules: IWlib
  extra-libraries: iw
