name:                iwlib
version:             0.1.0.0
synopsis:            A binding to the iw library for getting info about the current WiFi connection.
homepage:            http://github.com/jaor/iwlib
license:             BSD3
license-file:        LICENSE
author:              Jose Antonio Ortega Ruiz <jao@gnu.org>
maintainer:          Jose Antonio Ortega Ruiz <jao@gnu.org>
category:            System, Network
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  readme.md

library
  build-depends:       base >=4 && <4.11
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     IWlib
  extra-libraries:     iw
  ghc-options:         -Wall